Layout Bug Mobile

--- a/main.css
+++ b/main.css
@@ -139,7 +139,7 @@ html,body{
     font-weight: 300;
     font-family: 'Quicksand';
     position: fixed;
-    top: 15%;
+    top: 25%;
 }
 
 #typewriter:after {
